--- a/src/style/App.css
+++ b/src/style/App.css
@@ -27,7 +27,6 @@
     margin-top: 10px;
 }
 .nav__link {
-    max-width: 80px;
     box-shadow: 0px 0px 4px rgba(0, 23, 71, 0.15);
     border-radius: 6px;
     padding: 5px 10px;
@@ -36,8 +35,9 @@
     transition: all 0.2s;
 }
 .nav__link:hover {
-    transform: translateY(-2px);
     background-color: rgb(193, 198, 213);
+    transform: translateY(-2px);
+    box-shadow: 2px 2px 4px rgba(12, 12, 12, 0.4);
 }
 .active__link {
     background-color: rgb(148, 174, 245);
