--- a/src/style/TodoItem.css
+++ b/src/style/TodoItem.css
@@ -2,6 +2,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 10px;
+    padding: 5px 20px;
+    border-radius: 6px;
+    border-bottom: 1px solid #ede4e4;
+    transition: all 0.3s;
+}
+.todoItem:hover {
+    background-color: rgb(237, 238, 242);
 }
 .deleteBtn {
     background-color: rgb(206, 132, 132);
@@ -9,12 +17,23 @@
     border-radius: 5px;
     padding: 0 7px;
     color: #fff;
+    transition: all 0.2s;
+}
+.deleteBtn:hover {
+    cursor: pointer;
+    transform: translateY(-2px);
+    box-shadow: 2px 2px 4px rgba(12, 12, 12, 0.4);
 }
 .isDone {
     width: 20px;
     height: 20px;
     border: 1px solid #bebebe;
     border-radius: 6px;
+    transition: all 0.3s;
+}
+.isDone:hover {
+    cursor: pointer;
+    border: 1px solid rgb(43, 150, 50);
 }
 .doned {
     background-color: rgb(72, 182, 111);
