--- a/src/style/TodoList.css
+++ b/src/style/TodoList.css
@@ -3,9 +3,25 @@
     padding: 10px 30px;
     box-shadow: 0px 0px 4px rgba(0, 23, 71, 0.15);
     border-radius: 8px;
-    font-size: 20px;
+    font-size: 16px;
     background: #fff;
 }
 .emptyTodos {
     text-align: center;
 }
+
+.todo-enter {
+    opacity: 0;
+  }
+  .todo-enter-active {
+    opacity: 1;
+    transition: opacity 300ms ease-in;
+  }
+  .todo-exit {
+    opacity: 1;
+  }
+  .todo-exit-active {
+    opacity: 0;
+    transition: opacity 300ms ease-in;
+  }
+  
